--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <script src="Ball.js"></script>
       <script src="Dustbin.js"></script>
       <script src="Ground.js"></script>
+      <script src="Block.js"></script>
 
 
       <script src="sketch.js"></script>
